--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Faculties#index</h1>
-<p>Find me in app/views/faculties/index.html.erb</p>
+<h1>Teachers List</h1>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>E-Mail</th>
+            <th>Contact Number</th>
+            <th>Subject</th>
+        </tr>
+        
+            <tr>
+            <td><%= current_teacher.full_name %></td>
+            <td><%= current_teacher.email %></td>
+            <td><%= current_teacher.contact_number %></td>
+            <td><%= current_teacher.subject %></td>
+            </tr>
+        
+    </table>
+    
