--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -14,11 +14,16 @@
     font-size: 35px;
     font-family: 'Times New Roman', Times, serif;
     margin-bottom: 10px;
+    color: rgb(13, 12, 12);
+  text-shadow: 2px 2px rgb(122, 115, 115);
   }
 
  body {
     background-color: #E4E4E1;
  background-image: radial-gradient(at top center, rgba(255,255,255,0.03) 0%, rgba(0,0,0,0.03) 100%), linear-gradient(to top, rgba(255,255,255,0.1) 0%, rgba(143,152,157,0.60) 100%);
  	background-blend-mode: normal, multiply;
-    height: 100vw
+   background-image: url('pexels-michał-osiński-3454270.jpg');
+   background-size: cover;
+    height: 95vh;
+    /* height: 100vw */
 }
