--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -20,10 +20,13 @@
 
  body {
     background-color: #E4E4E1;
- background-image: radial-gradient(at top center, rgba(255,255,255,0.03) 0%, rgba(0,0,0,0.03) 100%), linear-gradient(to top, rgba(255,255,255,0.1) 0%, rgba(143,152,157,0.60) 100%);
- 	background-blend-mode: normal, multiply;
-   background-image: url('pexels-michał-osiński-3454270.jpg');
-   background-size: cover;
-    height: 95vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-image: radial-gradient(at top center, rgba(255,255,255,0.03) 0%, rgba(0,0,0,0.03) 100%), linear-gradient(to top, rgba(255,255,255,0.1) 0%, rgba(143,152,157,0.60) 100%);
+ 	  background-blend-mode: normal, multiply;
+    background-image: url('school2.gif');
+    background-size: cover;
+   
+    
     /* height: 100vw */
 }
