--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,19 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<div class="sign_up">
+
+<h1>Edit Books</h1>
+<%= form_with model: @book do |form| %>
+    <div>
+      <%= form.label :book_name %><br>
+      <%= form.text_field :book_name %>
+    </div>
+  
+    <div>
+      <%= form.label :author_name %><br>
+      <%= form.text_area :author_name %>
+    </div>
+  
+    <div>
+      <%= form.submit %>
+    </div>
+  <% end %>
+</div>
