--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<div>
+<h1 class= "heading">Books List</h1>
+    <%= button_to 'New Book', new_book_path, method: :get,class: "new"%>
+</div> 
+    <table>
+        <tr>
+            <th>Book Name</th>
+            <th>Author Name</th>
+            <th>Edit</th>
+            <th>Delete</th>
+        </tr>
+        <% @books.each do |books| %>
+            <tr>
+            <td><%= books.book_name %></td>
+            <td><%= books.author_name %></td>
+            <td><%= link_to "Edit",  edit_book_path(books) %></td>
+            
+            <td><%= link_to "Delete", book_path(books), data: {
+                turbo_method: :delete,
+                turbo_confirm: "Are you sure you want to destroy student ?"
+              } %></td>
+            </tr>
+        <% end %>
+    </table>
+
+   
+
+
+
+
+
